[package]
name = "gypsum"
version = "0.1.0"
readme = "README.md"
authors = ["Ivo C.S. Wingelaar <ivo.wingelaar@gmail.com>"]
description = "A Rust library for drawing ASCII-style roguelike graphics targetting both native (GL) and wasm (WebGL) platforms"
license = "MIT"

[dependencies]
uni-app = { git = "https://github.com/unrust/uni-app" }
webgl = { git = "https://github.com/unrust/webgl" }
