[package]
name = "gypsum"
version = "0.1.0"
readme = "README.md"
authors = ["Ivo C.S. Wingelaar <ivo.wingelaar@gmail.com>"]
description = "A Rust library for drawing ASCII-style roguelike graphics targetting both native (OpenGL) and wasm (WebGL) platforms"
documentation = "https://docs.rs/gypsum"
repository ="https://github.com/IvoWingelaar/gypsum"
keywords = ["roguelike", "opengl", "webgl"]
license = "MIT"

[dependencies]
uni-app = "0.1.0"
uni-gl = "0.1.0"

[dependencies.image]
version = "0.19.0"
default-features = false
features = ["png_codec"]
